packages/cursus/src/model/config/snapshots/cursus__model__config__template__tests__snapshot_github_no_owner_repo_no_detection.snap
---
source: packages/cursus/src/model/config/template.rs
expression: render(&result)
---
# [global]
# disable_dependency_cycle_warnings = false  # Suppress warnings about circular dependencies between packages (two or more packages in a cycle)
# ignore = ["example-*"]                     # Glob patterns for packages to exclude from enumeration

[cargo]
enabled = true
# path = "subdir/"              # Subdirectory for Cargo.toml (relative to git root)

# [npm]
# enabled = false
# path = "subdir/"              # Subdirectory for package.json (relative to git root)
# lock_command = "npm install"  # Custom command to update the lock file
# access = "restricted"         # Access level for scoped packages: "public" or "restricted" (default: "restricted")

# [prepare]
# dependency_bump = "auto"      # Bump level for dependents: "auto" (default), "match", "patch", "minor", or "major"

# [linked-versions]
# Keep all packages at the same version (global linking).
# enabled = true

# Or define groups of packages that should share a version:
# [[linked-versions.groups]]
# packages = ["@org/prefix-*", "@org/other"]

[git]
enabled = true
strategy = "push"
# tag_format = "auto"                                       # Tag format: "auto", "prefixed", or "simple"
# release_branch_prefix = "cursus-release/"                 # Prefix for release branches (branch strategy)
# extra_files = []                                          # Additional files to stage before committing
# prepare_commit_message = "ci(release): version packages"  # Commit message for the prepare step
# publish_private_packages = []                             # Private packages that receive git tags and GitHub Releases (no registry publish)

[github]
enabled = true
# owner = ""                        # GitHub owner (auto-detected from remote if omitted)
# repo = ""                         # GitHub repo (auto-detected from remote if omitted)
# build_command = ""                # Shell command to build release artifacts
# pull_request_title = ""           # Custom PR title (default: "Release updates")
# [github.artifacts.<package-name>] # Per-package: display name -> file path for release assets
